--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react-datepicker": "^4.19.5",
+    "@types/react-dropzone": "^5.1.0",
     "@uploadthing/react": "^6.2.0",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +30,7 @@
     "react": "^18",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
     "shadcn-ui": "^0.5.0",
     "sheet": "^0.2.0",
